maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:37: error: illegal start of simple pattern
		case match {
                     ^JediEscaper:44: error: '=>' expected but '}' found.
	}
        ^